style: email template views

--- a/v1/src/views/emails/post-email.hbs
+++ b/v1/src/views/emails/post-email.hbs
@@ -9,13 +9,13 @@
     Sevgili öğrencimiz,
   </h2>
 
-  <p>"{{title}}" başlıklı yeni bir duyuru paylaşıldı.</p>
+  <p>"{{title}}" Yeni bir duyuru paylaşıldı.</p>
 
-  <h5
+  <h3
     style="font-family: Whitney, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;font-weight: 500;font-size: 10px;color: #4F545C;letter-spacing: 0.27px;"
   >
     Duyurunun İçeriği
-  </h5>
+  </h3>
   <p>{{content}}</p>
 
 </div>
